--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
       </svg>
     </button>
     <button
-    (click)="auth.logout({ logoutParams: { returnTo: document.location.origin} })">
+    (click)="logout()">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
         class="size-6 rotate-270">
         <path stroke-linecap="round" stroke-linejoin="round"
