--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
       (click)="navigateUrl('/home')">
       <img src="assets/main_logo.svg" alt="logo" class="size-8" />
     </div>
-    <h2 class="text-3xl font-bold text-gray-900">ranchxpert</h2>
+    <h2 class="text-3xl font-bold text-gray-900">RanchXpert</h2>
   </div>
   <div class="flex flex-row items-center mr-5 gap-4">
     <button class="" (click)="navigateUrl('/settings')">
