--- a/frontend/src/app/pages/multi-factor/multi-factor.component.html
+++ b/frontend/src/app/pages/multi-factor/multi-factor.component.html
@@ -5,7 +5,7 @@
       <div class="mx-auto h-18 w-18 border-3 border-accent rounded-xl flex items-center justify-center mb-6 p-4">
         <img src="assets/cow.svg" alt="logo" class="size-12" />
       </div>
-      <h2 class="text-3xl font-bold text-gray-900">ranchxpert</h2>
+      <h2 class="text-3xl font-bold text-gray-900">RanchXpert</h2>
       <p class="mt-2 text-sm text-gray-600">We sent a code to your email address</p>
     </div>
 
