fix to show/hide header bar

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="h-screen w-full grid grid-rows-[auto_1fr]">
   <app-header *ngIf="showHeader" class="shrink-0" />
-  <div class="flex-1 overflow-y-auto">
+  <div class="flex-1 overflow-y-auto app-container">
     <router-outlet />
   </div>
 </main>
