--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,13 +1,27 @@
 @if (showHeader()) {
-<main class="flex flex-row items-center justify-between p-2 gap-4">
+<main class="flex flex-row items-center justify-between p-2 px-4 gap-4">
   <div class="flex flex-row items-center gap-2">
+      <button class="md:flex hidden">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+      <path fill-rule="evenodd"
+        d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z"
+        clip-rule="evenodd" />
+    </svg>
+  </button>
     <div class="border-3 border-accent rounded-xl flex flex-row items-center justify-center p-2"
       (click)="navigateUrl('/home')">
       <img src="assets/main_logo.svg" alt="logo" class="size-8" />
     </div>
-    <h2 class="text-3xl font-bold text-gray-900">RanchXpert</h2>
+    <h2 class="text-xl md:text-3xl font-bold text-gray-900">RanchXpert</h2>
   </div>
-  <div class="flex flex-row items-center mr-5 gap-4">
+  <button class="md:hidden">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+      <path fill-rule="evenodd"
+        d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z"
+        clip-rule="evenodd" />
+    </svg>
+  </button>
+  <div class="md:flex hidden flex-row items-center gap-4">
     <button class="" (click)="navigateUrl('/settings')">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
         <path fill-rule="evenodd"
