--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,9 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
 
-@custom-variant dark {
-  &: where(.dark, .dark *);
-}
+@custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
     --color-primary: #84714F;
