--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,7 +5,7 @@
   </div>
 </main> -->
 
-<main class="h-screen w-screen flex flex-col relative bg-gradient-to-br from-primary via-white to-accent dark:from-black dark:via-secondary dark:to-accent">
+<main class="h-full w-full flex flex-col relative bg-gradient-to-br from-primary via-white to-accent dark:from-black dark:via-secondary dark:to-accent">
   <!-- Fixed header -->
   @if (showHeader()) {
   <app-header class="fixed top-0 left-0 right-0 z-50 h-[75px] pt-[env(safe-area-inset-top)] bg-white shadow-md" />
