--- a/frontend/src/app/pages/not-found/not-found.component.html
+++ b/frontend/src/app/pages/not-found/not-found.component.html
@@ -1,7 +1,7 @@
-<main class="h-full w-full p-6 flex flex-col items-center justify-start">
+<main class="h-full w-full p-6 flex flex-col items-center justify-start dark:bg-secondary-dark">
   <div class="mx-0 flex flex-col items-center gap-4">
     <h1 class="text-7xl font-medium text-accent">404</h1>
-    <p class="text-sm">Oops, this page has been moved or no longer exists</p>
+    <p class="text-sm dark:text-gray-300">Oops, this page has been moved or no longer exists</p>
     <button class="px-3 py-1.5 rounded shadow bg-primary text-white" (click)="navigateUrl('/home')">
       <span class="flex flex-row items-center gap-2">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
