--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,16 +1,16 @@
-<main class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+<main class="flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8">
 
     <div class="text-center">
-      <div class="mx-auto h-18 w-18 border-3 border-accent rounded-xl flex items-center justify-center mb-6 p-4">
+      <div class="mx-auto h-18 w-18 border-3 border-accent dark:bg-white rounded-xl flex items-center justify-center mb-6 p-4">
         <img src="assets/main_logo.svg" alt="logo" class="size-12" />
       </div>
-      <h2 class="text-3xl font-bold text-gray-900">RanchXpert</h2>
-      <p class="mt-2 text-sm text-gray-600">Please login to your account</p>
+      <h2 class="text-3xl font-bold text-gray-900 dark:text-gray-200">RanchXpert</h2>
+      <p class="mt-2 text-sm text-gray-600 dark:text-gray-300">Please login to your account</p>
     </div>
 
 
-    <div class="bg-white py-8 px-6 ">
+    <div class="bg-white dark:bg-gray-950 rounded py-8 px-6 ">
 
       <div *ngIf="errorMessage" class="mb-4 p-3 bg-red-50 border border-red-200 rounded-lg">
         <div class="flex">
@@ -40,17 +40,17 @@
       <form class="space-y-6" [formGroup]="loginFormGroup" (ngSubmit)="login()">
 
         <div>
-          <label for="username" class="block text-sm font-medium text-gray-700 mb-2">Email/Username</label>
+          <label for="username" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Email/Username</label>
           <div class="relative">
             <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-              <svg class="size-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <svg class="size-5 text-gray-400 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207">
                 </path>
               </svg>
             </div>
             <input id="username" name="username" type="text" formControlName="username"
-              [class]="'block w-full pl-10 pr-3 py-3 border rounded-lg focus:ring-2 focus:ring-blue-500 transition-colors duration-200 text-sm ' + (usernameErrors ? 'border-red-300 focus:border-red-500' : 'border-accent focus:border-blue-500')"
+              [class]="'block w-full pl-10 pr-3 py-3 border dark:text-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 transition-colors duration-200 text-sm ' + (usernameErrors ? 'border-red-300 focus:border-red-500' : 'border-accent focus:border-blue-500')"
               placeholder="Enter your email or username" [disabled]="isLoading">
           </div>
           <p *ngIf="usernameErrors" class="mt-2 text-sm text-red-600">{{ usernameErrors }}</p>
@@ -58,7 +58,7 @@
 
 
         <div>
-          <label for="password" class="block text-sm font-medium text-gray-700 mb-2">Password</label>
+          <label for="password" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Password</label>
           <div class="relative">
             <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
               <svg class="size-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -68,7 +68,7 @@
               </svg>
             </div>
             <input id="password" name="password" type="password" formControlName="password"
-              [class]="'block w-full pl-10 pr-10 py-3 border rounded-lg focus:ring-2 focus:ring-blue-500 transition-colors duration-200 text-sm ' + (passwordErrors ? 'border-red-300 focus:border-red-500' : 'border-accent focus:border-blue-500')"
+              [class]="'block w-full pl-10 pr-10 py-3 border dark:text-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 transition-colors duration-200 text-sm ' + (passwordErrors ? 'border-red-300 focus:border-red-500' : 'border-accent focus:border-blue-500')"
               placeholder="Enter your password" [disabled]="isLoading">
             <div class="absolute inset-y-0 right-0 pr-3 flex items-center">
               <button type="button" class="text-gray-400 hover:text-gray-600 transition-colors duration-200"
@@ -92,7 +92,7 @@
             <input id="remember-me" name="remember-me" type="checkbox"
               class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded transition-colors duration-200"
               [disabled]="isLoading">
-            <label for="remember-me" class="ml-2 block text-sm text-gray-700">Remember me</label>
+            <label for="remember-me" class="ml-2 block text-sm text-gray-700 dark:text-gray-300">Remember me</label>
           </div>
           <div class="text-sm">
             <a href="/forgot-password"
@@ -132,10 +132,10 @@
 
         <div class="relative">
           <div class="absolute inset-0 flex items-center">
-            <div class="w-full border-t border-gray-300"></div>
+            <div class="w-full border-t border-gray-300 dark:border-gray-600"></div>
           </div>
           <div class="relative flex justify-center text-sm">
-            <span class="px-2 bg-white text-gray-500">Or continue with</span>
+            <span class="absolute -top-2.5 z-50 px-2 text-gray-500 dark:text-gray-100">Or continue with</span>
           </div>
         </div>
 
@@ -172,13 +172,13 @@
       </form>
     </div>
 
-    <div class="text-center">
+    <!-- <div class="text-center">
       <p class="text-sm text-gray-600">
         Don't have an account?
         <a href="/register" class="font-medium text-blue-600 hover:text-blue-500 transition-colors duration-200">
           Sign up here
         </a>
       </p>
-    </div>
+    </div> -->
   </div>
 </main>
