--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 @if (user(); as user) {
-<main class="h-full p-4 overflow-y-auto">
+<main class="h-full p-4">
   <!-- Dashboard Header -->
   <div class="bg-white dark:bg-secondary-dark rounded-lg shadow-sm border border-gray-200 p-4 mb-4">
     <div class="w-full flex flex-col md:flex-row md:items-center justify-between gap-4">
